# facebook-downloader

./: Dockerfile  LICENSE  README.md  downloader.py  install.ps1  install.sh  pyproject.toml  requirements.txt  setup.py  test_download_video.py  uninstall.ps1  uninstall.sh
.github/workflows/: codeql.yml  python-app.yml
facebook_downloader/: __init__.py  downloader.py  main.py
